# bripy

./: .coveragerc  .gitignore  .isort.cfg  AUTHORS.md  CONTRIBUTING.md  LICENSE.txt  README.md  README.rst  conftest.py  dev-requirements.txt  environment.yaml  jupyter-requirements.txt  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.md  index.rst
notebooks/: df.ipynb  iter.ipynb
scraps/: big_glob.py  create_db.py  daskerator.py  db_exists.py  db_worker.py  dir_q.py  fileinfo.py  globber.py  hash_q.py  insert_files.py  listdirs.py  mgr.py  multi_file.py  multi_simple.py  simple.py  single_worker.py  single_worker_db.py  watchers.py
scripts/: big_glob.py  check_db.py  db_batcher.py  db_exists.py  db_worker.py  globber.py  hash_q.py  insert_files.py  multi_file.py  multi_simple.py  reset_tracking.py  simple.py  single_worker.py
src/bllb/: bllb.py  bllb_file.py  bllb_iter.py  bllb_jupyter.py  bllb_logging.py  bllb_nlp.py  bllb_nltk.py  bllb_parsers.py  bllb_str.py
src/bripy/: __init__.py  _version.py  conftest.py  py_info.py  skeleton.py
src/bripy/bllb/: __init__.py  bllb.py  bllb_file.py  bllb_iter.py  bllb_jupyter.py  bllb_logging.py  bllb_nlp.py  bllb_nltk.py  bllb_parsers.py  bllb_str.py  bllb_web.py  blld_db.py  dask_.py  df.py  file.py  fs.py  func.py  iter.py  log.py  logging.py  num.py  ops.py  path.py  polars.py  q.py  str.py
src/bripy/bllb/tests/: __init__.py  test_bllb.py  test_df.py  test_file.py  test_iter.py  test_log.py  test_num.py  test_parsers.py  test_path.py  test_str.py
src/bripy/examinator/: __init__.py  daskerator.py  examinator.py  fileinfo.py  listdirs.py  watchers.py
src/bripy/examinator/tests/: test_examinator.py
src/bripy/tests/: test_skeleton.py
src/bripy/ubrl/: __init__.py  __main__.py  cli.py  ubrl.py
src/bripy/ubrl/tests/: __init__.py  context.py  test_cli.py  test_ubrl.py
src/ubrl/: __init__.py  cli.py  ubrl.py
tests/: conftest.py  test_skeleton.py
tests/bllb/: test_bllb.py  test_bllb_file.py  test_bllb_iter.py  test_bllb_logging.py  test_bllb_str.py  test_df.py  test_file.py  test_iter.py  test_parsers.py
tests/examinator/: test_examinator.py
tests/ubrl/: context.py  test_cli.py  test_ubrl.py
